--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NexusFlow - The Chalnuparchha of Team Collaborat</title>
+    <title>NexusFlow - The Future of Team Collaboration</title>
     <link href="templatemo-nexus-style.css" rel="stylesheet">
 <!--
 
@@ -39,7 +39,7 @@ https://templatemo.com/tm-594-nexus-flow
     <!-- Navigation -->
     <nav>
         <div class="nav-container">
-            <a href="#top" class="logo">Nexus-Main-Banner</a>
+            <a href="#top" class="logo">Nexus</a>
             <ul class="nav-links">
                 <li><a href="#features">Features</a></li>
                 <li><a href="#pricing">Pricing</a></li>
@@ -63,7 +63,7 @@ https://templatemo.com/tm-594-nexus-flow
     <div class="mobile-menu-overlay" id="mobileMenuOverlay"></div>
     <div class="mobile-menu" id="mobileMenu">
         <div class="mobile-menu-header">
-            <a href="#top" class="mobile-menu-logo">NexusFlow</a>
+            <a href="#top" class="mobile-menu-logo">Yuvi/a>
             <button class="mobile-menu-close" id="mobileMenuClose">✕</button>
         </div>
         <div class="mobile-menu-cta">
