--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ https://templatemo.com/tm-594-nexus-flow
         </div>
         <nav class="mobile-menu-nav">
             <ul>
-                <li><a href="#features">Home</a></li>
+                <li><a href="#features">Mero Ghar</a></li>
                 <li><a href="#pricing">Pricing</a></li>
                 <li><a href="#stats">Stats</a></li>
                 <li><a href="#contact">Contact</a></li>
