--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ https://templatemo.com/tm-594-nexus-flow
     <section class="hero">
         <div class="hero-container">
             <h1 class="hero-title">
-                <span class="hero-nexus">Yuvi</span><span class="hero-flow">Class ho</span>
+                <span class="hero-nexus">Cloud</span><span class="hero-flow">Class</span>
             </h1>
-            <p class="hero-subtitle">The quantum leap in team collaboration. Connect minds, sync realities, achieve impossible.</p>
+            <p class="hero-subtitle">Welcome to Cloud with Yuvi. Subscribe, Like, Share cloudwithyuvi.com website </p>
             <div class="hero-buttons">
                 <a href="#" class="btn-primary">Initialize System</a>
                 <a href="#" class="btn-secondary">View Documentation</a>
