--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ https://templatemo.com/tm-594-nexus-flow
             <h1 class="hero-title">
                 <span class="hero-nexus">Cloud</span><span class="hero-flow">Class</span>
             </h1>
-            <p class="hero-subtitle">Welcome to Cloud with Yuvi. Subscribe, Like, Share cloudwithyuvi.com website </p>
+            <p class="hero-subtitle">Welcome to Cloud with Yuvi.</p>
             <div class="hero-buttons">
                 <a href="#" class="btn-primary">Initialize System</a>
                 <a href="#" class="btn-secondary">View Documentation</a>
