--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ https://templatemo.com/tm-594-nexus-flow
                 <span class="hero-nexus">Cloud</span><span class="hero-flow">Class</span>
             </h1>
             <p class="hero-subtitle">Welcome to Cloud with Yuvi.</p>
-            <p class="hero-subtitle">We are from Blue/Green Deployment with New Autoscaling.</p>
+            <p class="hero-subtitle">We are from Blue/Green Deployment with AS.</p>
             <div class="hero-buttons">
                 <a href="#" class="btn-primary">Initialize System</a>
                 <a href="#" class="btn-secondary">View Documentation</a>
