--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CloudWithYuvi - The Future of Cloud Collaboratin</title>
+    <title>CloudWithYuvi -vThe Future of Cloud Collaboratin</title>
     <link href="templatemo-nexus-style.css" rel="stylesheet">
 <!--
 
